# manipulation_project

./: .gitignore  .gitmodules
get_cube_pose/: CMakeLists.txt
get_cube_pose/include/get_cube_pose/: get_pose_client.hpp
get_cube_pose/launch/: get_pose_client.launch.py  get_pose_client_real.launch.py
get_cube_pose/rviz_config/: launch_part.rviz
get_cube_pose/src/: get_pose_client.cpp
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py
moveit2_scripts/src/: pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: name.srdf
my_moveit_config/launch/: move_group.launch.py
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: kinematics.yaml  name.srdf
real_moveit_config/launch/: move_group.launch.py
ur3e_helper_scripts/: CMakeLists.txt  Commands.txt  Notes.txt  README.txt  package.xml
ur3e_helper_scripts/launch/: display_current_pose.launch.py  move_to_blocks.launch.py  move_to_coords.launch.py  reset_grasp_object.launch.py  setup_grasp_object.launch.py  spawn_objects.launch.py
ur3e_helper_scripts/src/: display_current_pose.cpp  move_to_blocks.cpp  move_to_coords.cpp  reset_grasp_object.cpp  setup_grasp_object.cpp
ur3e_helper_scripts/urdf/: block.urdf  cube.urdf
